--- a/DarkEngines/package.json
+++ b/DarkEngines/package.json
@@ -7,6 +7,7 @@
 	"flat": true,
 	"dependencies": {
 		"@polymer/app-layout": "^3.0.0-pre.12",
+		"@polymer/iron-icons": "^3.0.0-pre.12",
 		"@polymer/paper-checkbox": "^3.0.0-pre.12",
 		"@polymer/paper-icon-button": "^3.0.0-pre.12",
 		"@polymer/paper-input": "^3.0.0-pre.12",
@@ -41,7 +42,7 @@
 		"assert-plus": "0.2.0",
 		"uglify-js": "2.8.29",
 		"loader-utils": "1.1.0",
-		"readable-stream": "2.3.3",
+		"readable-stream": "2.3.5",
 		"isarray": "1.0.0",
 		"utila": "0.4.0",
 		"domutils": "1.5.1",
@@ -66,7 +67,7 @@
 		"pify": "2.3.0",
 		"strip-bom": "3.0.0",
 		"array-flatten": "2.1.1",
-		"mime": "1.4.0",
+		"mime": "2.2.2",
 		"faye-websocket": "0.11.1",
 		"url-parse": "1.1.9",
 		"querystringify": "1.0.0",
@@ -100,16 +101,52 @@
 		"depd": "1.1.2",
 		"setprototypeof": "1.1.0",
 		"statuses": "1.5.0",
-		"http-errors": "1.6.3"
+		"http-errors": "1.6.3",
+		"recast": "0.14.7",
+		"ast-types": "0.11.3",
+		"esprima": "4.0.0",
+		"chalk": "2.3.2",
+		"enhanced-resolve": "4.0.0",
+		"ansi-styles": "3.2.1",
+		"tapable": "1.0.0",
+		"cross-spawn": "6.0.5",
+		"parse-json": "4.0.0",
+		"got": "8.3.0",
+		"inquirer": "5.2.0",
+		"jscodeshift": "0.5.0",
+		"log-symbols": "2.2.0",
+		"lowercase-keys": "1.0.1",
+		"p-cancelable": "0.4.0",
+		"p-timeout": "2.0.1",
+		"url-parse-lax": "3.0.0",
+		"prepend-http": "2.0.0",
+		"ansi-escapes": "3.1.0",
+		"cli-cursor": "2.1.0",
+		"figures": "2.0.0",
+		"restore-cursor": "2.0.0",
+		"onetime": "2.0.1",
+		"symbol-observable": "1.0.1",
+		"babylon": "7.0.0-beta.42",
+		"colors": "1.2.1",
+		"jsesc": "1.3.0",
+		"indent-string": "3.2.0",
+		"vinyl": "2.1.0",
+		"clone": "2.1.2",
+		"clone-stats": "1.0.0",
+		"replace-ext": "1.0.0",
+		"commander": "2.15.1",
+		"webpack-dev-middleware": "3.1.0"
 	},
 	"devDependencies": {
 		"clean-webpack-plugin": "^0.1.16",
 		"copy-webpack-plugin": "^4.0.1",
-		"html-loader": "^0.5.1",
-		"html-webpack-plugin": "^2.30.1",
-		"ts-loader": "^2.3.4",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.1.0",
+		"ts-loader": "^4.1.0",
 		"typescript": "^2.3.4",
-		"webpack": "^3.5.5",
-		"webpack-dev-server": "^2.7.1"
+		"webpack": "^4.4.1",
+		"webpack-cli": "^2.0.13",
+		"webpack-dev-middleware": "^3.1.0",
+		"webpack-dev-server": "^3.1.1"
 	}
 }
